@@ -1,3 +1,9 @@
+2013-05-07 Frederik "Freso" S. Olesen <freso.dk@gmail.com>
+
+	* lwjgl-2.9.0-1 :
+	Simple version bump.
+	See http://lwjgl.org/forum/index.php?topic=4974 for version changes.
+
 2012-11-05 Frederik "Freso" S. Olesen <freso.dk@gmail.com>
 
 	* lwjgl-2.8.5-1 :
